--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@nick22985/manacubeApi",
-	"version": "1.0.1",
+	"name": "manacubeApi",
+	"version": "0.0.1",
 	"description": "A typescript npm packages to interact with the mana api",
 	"main": "lib/index.js",
 	"types": "lib/index.d.ts",
