--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "manacubeapi",
+	"name": "manacube",
 	"version": "0.0.1",
 	"description": "A typescript npm packages to interact with the mana api",
 	"main": "lib/index.js",
@@ -14,6 +14,7 @@
 		"mana",
 		"cube",
 		"manacube",
+		"manacubeapi",
 		"Mana Cube",
 		"Mana Cube API",
 		"Mana Cube API Client",
@@ -35,6 +36,7 @@
 	},
 	"scripts": {
 		"start": "nodemon --exec ts-node src/index.ts",
+		"build": "tsc",
 		"test": "jest"
 	},
 	"author": "nick22985",
