--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"dotenv": "^16.0.0",
 		"jest": "^27.4.5",
 		"nodemon": "^2.0.15",
-		"ts-node": "^10.9.1"
+		"ts-node": "^10.9.1",
+		"typescript": "^4.8.2"
 	}
 }
