--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -15,8 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      max-parallel: 24
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+#         node-version: [12.x, 14.x, 16.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
