--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 	"author": "nick22985",
 	"license": "MIT",
 	"dependencies": {
-		"axios": "^0.26.0"
+		"axios": "^0.26.0",
+		"qs": "^6.11.0"
 	},
 	"devDependencies": {
 		"@types/jest": "^27.4.1",
