--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"axios": "^1.1.3",
+		"manacube": "^1.2.3",
 		"qs": "^6.11.0"
 	},
 	"devDependencies": {
