--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
 	"version": "1.2.8",
 	"description": "A typescript npm packages to interact with the mana api",
 	"main": "lib/index.js",
+	"module": "lib/index.js",
 	"types": "lib/index.d.ts",
+	"type": "module",
+	"exports": {
+		".": {
+			"import": "./lib/index.js",
+			"require": "./lib/index.cjs",
+			"types": "./lib/index.d.ts"
+		}
+	},
 	"publishConfig": {
 		"access": "public"
 	},
@@ -36,23 +45,29 @@
 	},
 	"scripts": {
 		"start": "nodemon --exec ts-node src/index.ts",
-		"build": "tsc",
+		"build": "npm run build:esm && npm run build:cjs && npm run build:fix",
+		"build:esm": "tsc",
+		"build:cjs": "tsc -p tsconfig.cjs.json",
+		"build:fix": "mv lib-cjs/index.js lib/index.cjs && mv lib-cjs/index.d.ts lib/index.d.cts && rm -rf lib-cjs",
 		"test": "jest"
 	},
 	"author": "nick22985",
 	"license": "MIT",
 	"dependencies": {
-		"axios": "^1.4.0",
-		"manacube": "^1.2.4",
-		"qs": "^6.11.2"
+		"axios": "^1.10.0",
+		"debug": "^4.4.1",
+		"manacube": "^1.2.8",
+		"qs": "^6.14.0"
 	},
 	"devDependencies": {
-		"@types/jest": "^29.5.2",
-		"@types/node": "^20.3.2",
-		"dotenv": "^16.3.1",
-		"jest": "^29.5.0",
-		"nodemon": "^2.0.22",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.1.6"
+		"@types/debug": "^4.1.12",
+		"@types/jest": "^30.0.0",
+		"@types/node": "^24.0.13",
+		"axios-mock-adapter": "^2.1.0",
+		"dotenv": "^17.2.0",
+		"jest": "^30.0.4",
+		"nodemon": "^3.1.10",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.8.3"
 	}
 }
