--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
 		"axios": "^1.10.0",
 		"debug": "^4.4.1",
 		"manacube": "^1.2.8",
-		"qs": "^6.14.0"
+		"qs": "^6.14.0",
+		"socks-proxy-agent": "^8.0.5"
 	},
 	"devDependencies": {
 		"@types/debug": "^4.1.12",
