--- a/package.json
+++ b/package.json
@@ -42,27 +42,27 @@
 		"build": "npm run build:esm && npm run build:cjs && npm run build:fix",
 		"build:esm": "tsc",
 		"build:cjs": "tsc -p tsconfig.cjs.json",
-		"build:fix": "mv lib-cjs/index.js lib/index.cjs && mv lib-cjs/index.d.ts lib/index.d.cts && rm -rf lib-cjs",
+		"build:fix": "mv lib-cjs/index.js lib/index.cjs && mv lib-cjs/index.d.ts lib/index.d.cts && rm -rf lib/types && cp -r lib-cjs/types lib/ && rm -rf lib-cjs",
 		"test": "jest"
 	},
 	"author": "nick22985",
 	"license": "MIT",
 	"dependencies": {
-		"axios": "^1.10.0",
+		"axios": "^1.11.0",
 		"debug": "^4.4.1",
-		"manacube": "^1.2.8",
 		"qs": "^6.14.0",
-		"socks-proxy-agent": "^8.0.5"
+		"socks-proxy-agent": "^8.0.5",
+		"zod": "^4.0.14"
 	},
 	"devDependencies": {
 		"@types/debug": "^4.1.12",
 		"@types/jest": "^30.0.0",
-		"@types/node": "^24.0.13",
+		"@types/node": "^24.1.0",
 		"axios-mock-adapter": "^2.1.0",
-		"dotenv": "^17.2.0",
-		"jest": "^30.0.4",
+		"dotenv": "^17.2.1",
+		"jest": "^30.0.5",
 		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.8.3"
+		"typescript": "^5.9.2"
 	}
 }
