--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
 	"scripts": {
 		"start": "nodemon --exec ts-node src/index.ts",
 		"build": "tsup",
-		"test": "jest"
+		"test": "jest",
+		"prepublishOnly": "npm run build && npm test",
+		"release": "npm version patch && git push && git push --tags && npm publish",
+		"release:minor": "npm version minor && git push && git push --tags && npm publish",
+		"release:major": "npm version major && git push && git push --tags && npm publish"
 	},
 	"author": "nick22985",
 	"license": "MIT",
@@ -48,7 +52,6 @@
 		"axios": "^1.11.0",
 		"debug": "^4.4.1",
 		"qs": "^6.14.0",
-		"socks-proxy-agent": "^8.0.5",
 		"zod": "^4.0.14"
 	},
 	"devDependencies": {
